--- a/FirebaseAuthentication/FirebaseAuthentication/Storyboard/Base.lproj/Main.storyboard
+++ b/FirebaseAuthentication/FirebaseAuthentication/Storyboard/Base.lproj/Main.storyboard
@@ -199,6 +199,9 @@
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" systemColor="systemMintColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="onLoginTap:" destination="axZ-UT-Vgw" eventType="touchUpInside" id="tRx-4k-vyv"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ns0-SQ-qNK">
                                 <rect key="frame" x="20" y="713" width="353" height="21"/>
@@ -217,6 +220,9 @@
                                 <state key="normal" title="Sign Up">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="onSignUpTap:" destination="axZ-UT-Vgw" eventType="touchUpInside" id="3Km-bh-NOa"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password confirmation" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7SB-lj-LBt">
                                 <rect key="frame" x="20" y="575" width="353" height="34"/>
@@ -269,6 +275,11 @@
                             <constraint firstItem="P4Y-lM-D0e" firstAttribute="trailing" secondItem="f0w-11-5Ix" secondAttribute="trailing" constant="20" id="yRg-G8-dcB"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="phH-yj-K2n" id="ojZ-ip-igx"/>
+                        <outlet property="passwordConfirmationTextField" destination="7SB-lj-LBt" id="bfM-Iz-Jxb"/>
+                        <outlet property="passwordTextField" destination="f0w-11-5Ix" id="C1q-Q3-nKA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s69-NS-U6R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
